--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -14,10 +14,18 @@
         <link rel="shortcut icon" href="#">
         <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700&display=swap">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.css">
+        <link rel="stylesheet" href="{% static "css/solarized-dark.css" %}">
+
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
+        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script type="text/javascript" async src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script>
+
+    {% block extra_head %}
+    {% endblock extra_head %}
+
     </head>
     <body>
         <div class="ui small modal" id="login-modal">
@@ -118,7 +126,7 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.8.0/Chart.bundle.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/105/three.min.js"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery.form/4.2.2/jquery.form.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
+        <script src="//cdnjs.cloudflare.com/ajax/libs/highlight.js/9.15.8/highlight.min.js"></script>
         <script src="{% static "js/utility/perlin.js" %}"></script>
         {% block extra_js %}
         {% endblock extra_js %}
@@ -335,8 +343,27 @@
                 let data = getFormData(login_form)
                 let csrf = data.csrfmiddlewaretoken
             })
+
+            var TT_blue = 'rgba(0, 38, 66, 1)'
+            var TT_light_blue ='rgb(110, 207, 255)'
+            var TT_red = 'rgba(132, 0, 50, 1)'
+            var TT_yellow = 'rgba(229, 149, 0, 1)'
+            var TT_brown = 'rgb(97, 67, 14)'
+            var TT_cream = 'rgba(229, 218, 218, 1)'
+            var TT_beige = 'rgba(188, 171, 174, 1)'
         </script>
         <style>
+            :root {
+                --TT-blue: rgba(0, 38, 66, 1);
+                --TT-light-blue: rgba(110, 207, 255, 1);
+                --TT-red: rgba(132, 0, 50, 1);
+                --TT-yellow: rgba(229, 149, 0, 1);
+                --TT-brown: rgb(97, 67, 14);
+                --TT-cream: rgba(229, 218, 218, 1);
+                --TT-beige: rgba(188, 171, 174, 1);
+            }
+
+
             html, body {
                 font-family: 'Roboto', sans-serif;
                 font-weight: light;
