--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -1,6 +1,10 @@
 {% load static %}
 <html>
     <head>
+        {% load google_analytics_tags %}
+        <div style="display:none">
+            <img src="{% google_analytics %}" width="0" height="0" />
+        </div>
         {% if object.title %}
             <title>{{ object.title }}</title>
         {% else %}
@@ -20,9 +24,6 @@
         <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
         <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
         <script src="https://cdnjs.cloudflare.com/ajax/libs/semantic-ui/2.4.1/semantic.min.js"></script>
-        <script src="https://cdn.jsdelivr.net/npm/marked/marked.min.js"></script>
-        <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mathjax/2.7.5/latest.js?config=TeX-MML-AM_CHTML"></script>
-
     {% block extra_head %}
     {% endblock extra_head %}
 
