Article list view has space before footer.

--- a/TT/templates/articles/list.html
+++ b/TT/templates/articles/list.html
@@ -37,6 +37,7 @@
     <style>
         .articles {
             margin-top: 20vh;
+            margin-bottom: 20vh;
         }
 
         .article-container {
