--- a/TT/templates/pages/home.html
+++ b/TT/templates/pages/home.html
@@ -75,8 +75,9 @@
         .header-background {
             position: absolute;
             top: 0;
-            z-index: -100;
+            z-index: -10;
             width: 100%;
+            height: 110vh;
         }
 
         .main-header {
@@ -91,10 +92,12 @@
         #swt div {
             font-size: 40px;
             color: #919191;
+            z-index: -12;
         }
 
         #icon-container {
             height: 60vh;
+            z-index: -11;
         }
 
     </style>
