Fix page title typo.

--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -12,9 +12,9 @@
             <title>{{ object.title }}</title>
         {% else %}
             {% if page_title %}
-                <title>{{ page_title }} - Trefts Technologes</title>
+                <title>{{ page_title }} - Trefts Technologies</title>
             {% else %}
-                <title>Trefts Technologes</title>
+                <title>Trefts Technologies</title>
             {% endif %}
         {% endif %}
 
