--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -120,6 +120,10 @@
             border-radius: 4px;
             box-shadow: 5px 10px 8px;
         }
+
+        .article-image {
+            width: 100%;
+        }
     </style>
 
     <script>
