Added link to next article on every article detail page. Changed color of comment section and base footer to --TT-black.

--- a/TT/templates/articles/detail.html
+++ b/TT/templates/articles/detail.html
@@ -41,6 +41,10 @@
             <div id="main-content" class="ui content fixed-width"></div>
         </div>
 
+        {% if next_article %}
+            <a class="ui black button" href="{% url "articles:detail" slug=next_article.slug %}">Next: {{ next_article.title }}</a>
+        {% endif %}
+
     </div>
 
     <style>
