--- a/TT/templates/base.html
+++ b/TT/templates/base.html
@@ -375,6 +375,7 @@
         </script>
         <style>
             :root {
+                --TT-black: rgba(27, 28, 29, 1);
                 --TT-blue: rgba(0, 38, 66, 1);
                 --TT-light-blue: rgba(110, 207, 255, 1);
                 --TT-red: rgba(132, 0, 50, 1);
@@ -479,7 +480,7 @@
                 bottom: 0;
                 left: 0;
                 right: 0;
-                background: black;
+                background: var(--TT-black);
                 color: white;
                 height: 100px;
             }
